# OrangePi_4G-IOT_Android_8.1_BSP

./: delay.sh~
art/dex2oat/: dex2oat.cc
art/runtime/: class_linker.cc  oat_file_assistant.cc  thread_list.cc
art/sigchainlib/: sigchain.cc
bionic/libc/: Android.bp
bionic/linker/: dlfcn.cpp  linker_main.cpp
bionic/tests/: gtest_globals.h
bootable/recovery/: Android.mk  common.h  install.cpp  mt_common.h  mt_common.mk  mt_install.cpp  mt_install.h  mt_recovery.cpp  mt_recovery.h  mt_recovery.mk  mt_roots.cpp  mt_roots.h  recovery.cpp  roots.cpp  roots.h
ccu_tool/: Android.mk
ccu_tool/md32ccu/: README  ccmd32  envsetup.sh  pp
ccu_tool/mt6771/: Android.mk
compatibility/cdd/: OWNERS  make_cdd.py
cts/: Android.mk  CleanSpec.mk  CtsCoverage.mk  PREUPLOAD.cfg  error_prone_rules.mk  error_prone_rules_tests.mk  test_defs.sh
device/common/: generate-blob-lists.sh  generate-factory-images-common.sh  generate-packages.sh
device/sample/: OWNERS
docs/source.android.com/: README.txt
frameworks/av/: Android.bp  CleanSpec.mk
frameworks/base/: Android.mk
frameworks/data-binding/: Android.mk  build.gradle  databinding.properties  propLoader.gradle
frameworks/ml/: Android.bp
frameworks/multidex/: OWNERS  build.gradle  settings.gradle  version.gradle
frameworks/rs/: Android.bp  Android.mk  OWNERS  build_rs.py  libRS.map  rsApiFileA3D.cpp  rsApiStubs.cpp  rsApiStubs.h  rsContext.cpp  rsCppUtils.cpp  rsFifoSocket.cpp  rsFileA3D.cpp  rsGrallocConsumer.cpp  rsObjectBase.cpp  (+5 more)
hardware/qcom/media/sdm845/mm-video-v4l2/vidc/vdec/: Android.mk  Makefile.am
hardware/qcom/media/sdm845/mm-video-v4l2/vidc/vdec/inc/: omx_swvdec.h  omx_swvdec_utils.h  omx_vdec.h
hardware/qcom/media/sdm845/mm-video-v4l2/vidc/vdec/src/: omx_swvdec.cpp  omx_swvdec_utils.cpp  omx_vdec_extensions.hpp  omx_vdec_v4l2.cpp
kernel-3.18/: Android.mk  Makefile
libcore/: JavaLibrary.mk  NativeCode.mk  non_openjdk_java_files.mk  openjdk_java_files.mk
libnativehelper/: Android.bp  AsynchronousCloseMonitor.cpp  JNIHelp.cpp  JniConstants.cpp  toStringArray.cpp
platform_testing/: PREUPLOAD.cfg
(+16803 files in other folders)
